fix readme, fix dockerfile and docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,8 @@ services:
       - "8000:8000"
     volumes:
       - ./genetic_tests:/genetic_tests
-    
-    environment:
-      - DB_HOST=db
-      - DB_NAME=dbname
-      - DB_USER=dbuser
-      - DB_PASSWORD=pass
+    env_file:
+      - .env
       
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
@@ -21,7 +17,5 @@ services:
 
   db:
     image: postgres:16
-    environment:
-      - POSTGRES_USER=dbuser
-      - POSTGRES_PASSWORD=pass
-      - POSTGRES_DB=dbname
+    env_file:
+      - .env
